--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,16 +27,28 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v1
+      - name: Install Trunk
+        run: wget -qO- https://github.com/thedodd/trunk/releases/download/0.16.0/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+
+      - name: Install and build
+        run: npm install && npm run docs:build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: '.'
+          path: 'docs/.vuepress/dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: docs/.vuepress/dist # The folder the action should deploy.
