--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,24 +29,31 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]    
+        node-version: [12.x, 14.x, 16.x]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v1
 
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        
       - name: Install and build
         run: npm install && npm run docs:build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'docs/.vuepress/dist'
+          path: docs/.vuepress/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: docs/.vuepress/dist # The folder the action should deploy.
+        # with:
+        #   branch: gh-pages # The branch the action should deploy to.
+        #   folder: docs/.vuepress/dist # The folder the action should deploy.
